--- a/resume.html
+++ b/resume.html
@@ -46,31 +46,37 @@
             </section>
 
             <section class="project-item">
+              <img src="images/mobile-app-ss.png" srcset="" alt="A screenshot of the APK for an Android app is being verified." width="" height="">
               <h3>Mobile Application</h3>
               <p>Created a mobile application using Android Studio, Java, and SQL to help hypothetical college students keep better track of their classes and assessments. The application can send notifications for assessments, as well as send notes via email and SMS messaging. </p>
             </section>
 
             <section class="project-item">
+              <img src="images/add_customer_ss.png" srcset="" alt="A screenshot of a stand alone desktop application that allows users to add a new customer." width="" height="">
               <h3>Software 2 Advanced Java Concepts</h3>
               <p>Created a stand-alone PC application using IntelliJ IDEA, Java, and SQL to help a hypothetical company keep track of customers and appointments. The application connects to a database and can read and write to the database. It also lets users know if they have an upcoming appointment when they log in. The application log-in screen text reads as either English or French depending on the language settings of the user’s machine.</p>
             </section>
 
             <section class="project-item">
+              <img src="images/advanced-data-ss.png" srcset="" alt="A screenshot of a table that lists the data and data types involved in the reports for the project." width="" height="">
               <h3>Advanced-Data Management</h3>
               <p>Created a business plan for a hypothetical DVD rental business to run business reports using SQL and database management software to help increase revenue. These reports pulled data from different tables in the database to gather information suited for the client.</p>
             </section>
 
             <section class="project-item">
+              <img src="images/software1-ss.png" srcset="" alt="A screenshot of the high-fidelity wire-frames used in this project. Shows where two different tables, with their own sets of buttons would be on the screen." width="" height="">
               <h3>Software 1</h3>
               <p>Created a stand-alone PC application using IntelliJ IDEA and Java to help a hypothetical shop update its inventory management system. The application can add, update, delete, and search parts and other inventory in the shop’s warehouse. </p>
             </section>
 
             <section class="project-item">
+              <img src="images/user-exp-ss.png" srcset="" alt="A screenshot of the prototype's homepage. Shows the layout in high-fidelity for the webpage." width="" height="">
               <h3>User Experience Design</h3>
               <p>Created a business plan to create a navigable prototype of a hypothetical website for a travel agency. This business plan focused on meeting user experience guidelines, taking the user testing data, and implementing changes where appropriate while still meeting business requirements.</p>
             </section>
 
             <section class="project-item">
+              <img src="images/user-interface-ss.png" srcset="" alt="A screenshot of the navigable prototype produced during this project. Shows the layout of the homepage before the drop-down menu is activated." width="" height="">
               <h3>User Interface Design</h3>
               <p>Created a business plan to create a navigable prototype of a hypothetical website for a veterinary practice. The prototype was created using PowerPoint. The business plan focused on what kind of users would be likely to use the website and how the updated site could better serve their needs.</p>
             </section> 
